--- a/repositoryUserInterface/app/views/Application/editdevice.html
+++ b/repositoryUserInterface/app/views/Application/editdevice.html
@@ -73,6 +73,12 @@ lang="en">
 					async : false
 				});
 
+				$("#logout").click(function() {
+
+			    	window.location = URL_UI_SERVER + URL_LOGOUT_USER;
+			    });
+
+
 				
 				/*
 				 * Hiding Error Divs
