--- a/repositoryUserInterface/app/views/Application/actuate.html
+++ b/repositoryUserInterface/app/views/Application/actuate.html
@@ -244,7 +244,7 @@
 						$("#span" + removeSpace(deviceName)).html('Please select an actuator');
 
 					}
-					else{
+					/*else{
 						//check whether there is an association for the selected actuator
 						var urlGuardRulesAssocGet =	temp+URL_ASSOC_GET_GUARD_RULE;
 						var getAssoc = {};
@@ -274,7 +274,7 @@
 								$("#span" + removeSpace(deviceName)).html('This actuator is not associated with any guard rule. First <a href="'+url+'">Create an Association</a> for this actuator');
 							}						
 						}
-					}
+					}*/
 
 					return errorState;
 				}
