--- a/repositoryUserInterface/app/views/Application/editguardrule.html
+++ b/repositoryUserInterface/app/views/Application/editguardrule.html
@@ -34,9 +34,7 @@ lang="en">
 				var guardRuleToEdit = $("#guardrulename").val();
 				var mode = $("#mode").val();
 
-				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
-
-				var getGuardRule = temp+URL_GET_GUARD_RULE;			
+				var getGuardRule = URL_UI_SERVER+URL_GET_GUARD_RULE;			
 
 				
 				var secretkey = FAKE_SECRET_KEY;
@@ -51,13 +49,18 @@ lang="en">
 				
 				var classReference = "";				
 
-					/*
-					 * Setting the AJAX to work in synchronous fashion
-					 */
-					 	
-					jQuery.ajaxSetup({
-						async : false
-					});
+				/*
+				 * Setting the AJAX to work in synchronous fashion
+				 */
+				 	
+				jQuery.ajaxSetup({
+					async : false
+				});
+
+				$("#logout").click(function() {
+			    	window.location = URL_UI_SERVER + URL_LOGOUT_USER;
+			    });
+
 
 				
 				/*
@@ -74,6 +77,7 @@ lang="en">
 
 				function alertAddDeviceError(errorInformation) {
 
+					//$("#errorDiv").show();
 					$("#errorDiv").html(errorInformation);
 					$("#errorDiv").fadeIn('slow');
 					return false;
@@ -84,6 +88,8 @@ lang="en">
 				 * This function appends the passed string to the GetDeviceErrorDiv and shows the relevant error container
 				 */
 				function alertGetDeviceError(errorInformation) {
+
+					//$("#getDeviceErrorDiv").show();
 					$("#getDeviceErrorDiv").html(errorInformation);
 					$("#getDeviceErrorDiv").fadeIn('slow');
 					return false;
@@ -130,26 +136,31 @@ lang="en">
 					return errorState;
 				}
 
-				var getUsers = temp + URL_LIST_USERS;
+				var getUsers = URL_UI_SERVER + URL_LIST_USERS;
+				var receivedUserList = {};
 
 				// Get the list of users to allow/deny access
 				try{
 					$.post(getUsers, function(data) {
-						receivedUserList = data;					
+						receivedUserList = data;
 
-						//Successfully received data
-						if(receivedUserList.hasOwnProperty(RESPONSE_STATUS_CODE)) {
-							alertGetDeviceError("Following errors occurred " + receivedUserList[RESPONSE_MESSAGE]);
-						} else {
-
-							var userListCount = receivedUserList[USERNAME_ARRAY].length;
-							$("#divSelectUsers").append('<select id="selectUsers" rows="5" multiple="multiple"></select');
-							for(var username in receivedUserList[USERNAME_ARRAY])
-								$("#selectUsers").append('<option value='+receivedUserList[USERNAME_ARRAY][username]+'>'+receivedUserList[USERNAME_ARRAY][username]+'</option>');
-						}
 					});
+
+					//Successfully received data
+					if(receivedUserList.hasOwnProperty(RESPONSE_STATUS_CODE)) {
+						alertGetDeviceError("Following errors occurred " + receivedUserList[RESPONSE_MESSAGE]);
+					} else {
+
+						var userListCount = receivedUserList[USERNAME_ARRAY].length;
+						
+						$("#divSelectUsers").append('<select id="selectUsers" rows="5" multiple="multiple"></select');						
+						for(var username in receivedUserList[USERNAME_ARRAY])
+							$("#selectUsers").append('<option value='+receivedUserList[USERNAME_ARRAY][username]+'>'+receivedUserList[USERNAME_ARRAY][username]+'</option>');
+					}
 				}
-				catch(e){alertGetDeviceError(e);}
+				catch(e){
+					alertGetDeviceError(e);
+				}
 
 
 				var editGuardRule = {};
@@ -247,9 +258,8 @@ lang="en">
 					addRequestToSend[SECRET_KEY] = secretkey;	
 
 					var validationResult = true;
-					var temp="http://"+document.location.hostname+":"+document.location.port+"/";
-					var addGuardRuleURL = temp+URL_ADD_GUARD_RULE;
-					var delGuardRuleURL = temp+URL_DEL_GUARD_RULE;
+					var addGuardRuleURL = URL_UI_SERVER+URL_ADD_GUARD_RULE;
+					var delGuardRuleURL = URL_UI_SERVER+URL_DEL_GUARD_RULE;
 
 					//alert(JSON.stringify(addRequestToSend));	
 					
@@ -258,7 +268,7 @@ lang="en">
 								
 								$.post(addGuardRuleURL, JSON.stringify(addRequestToSend), function(data) {
 									if(data[RESPONSE_STATUS_CODE] == 0) {
-										window.location = temp+"guardrule";
+										window.location = URL_UI_SERVER+"guardrule";
 									} else {
 										alertAddDeviceError("Following error occured: " + data[RESPONSE_MESSAGE]);
 										validationResult = false;
