--- a/repositoryUserInterface/app/views/Application/managehome.html
+++ b/repositoryUserInterface/app/views/Application/managehome.html
@@ -18,9 +18,9 @@
 		<script type="text/javascript">
 			$(document).ready(function() {
 
-							
-				var temp="http://"+document.location.hostname+":"+document.location.port+"/";		
-				
+				jQuery.ajaxSetup({
+					async : false
+				});
 
 				createHeader();
 				createFooter();
@@ -30,6 +30,16 @@
 					window.location = URL_HOME_VO;
 				else if ($("#usertype").val() == "USER")
 					window.location = URL_HOME_USER;
+
+				/*$.post(URL_UI_SERVER + URL_GET_VPDS_INFO,function(data){
+					receivedInfo = data;
+					alert(receivedInfo);
+				});
+
+				if(typeof receivedInfo['repoName'] === 'undefined'){
+					alert("Connection to the VPDS could not be established. Please check if your VPDS has been started");
+					window.location = URL_HOME_VO;
+				}*/
 				
 			});
 			</script>
