--- a/repositoryUserInterface/public/stylesheets/style.css
+++ b/repositoryUserInterface/public/stylesheets/style.css
@@ -80,35 +80,68 @@ body{ font:16px/24px Helvetica, Helvetica Neue, Arial, sans-serif; }
 }
 
 /* ===================
-    ALL: Orange Theme
+    ALL: Changed Theme
    =================== */
 
-#header-container{ 
-	border-bottom: 20px solid #e44d26; }
+/*#header-container{ 
+	border-bottom: 20px solid #BFA130; }
 
 
-#footer-container{ border-top:    20px solid #e44d26;
+#footer-container{ border-top:    20px solid #BFA130;
 clear: both;
  
 }
-#main aside      { border-top:    20px solid #e44d26; }
+#main aside      { border-top:    20px solid #BFA130; }
 
 #header-container,
 #footer-container,
 #main aside{
-	background:#f16529;
+	background:#FFB700;
 }
 .newfont{ font-family: 'Port Lligat Sans', sans-serif;}
 #title{ color:white; font-size:75px; font-family: 'Port Lligat Sans', sans-serif;}
 #subtitle{ color:white; font-size:25px; font-family: 'Port Lligat Sans', sans-serif;}
-::-moz-selection { background: #f16529; color: #fff; text-shadow: none; }
-::selection      { background: #f16529; color: #fff; text-shadow: none; }
+::-moz-selection { background: #FFB700; color: #fff; text-shadow: none; }
+::selection      { background: #FFB700; color: #fff; text-shadow: none; }
 
+nav a,.pbox{
+	display:block;
+	margin-bottom:10px;
+	padding:1x 0;
+
+	background:#BFA130;
+	color:white;
+
+	text-align:center;
+	text-decoration:none;
+	font-weight:bold;
+}
+
+/* Added here*/
+/*
+nav .loginbox{
+	display:block;
+	margin-bottom:10px;
+	margin-left:2px;
+	padding:1x 0;
+
+	background:#BFA130;
+	color:white;
+
+	text-align:center;
+	text-decoration:none;
+	font-weight:bold;
+
+	width:60%;
+	position:relative;
+	left:20%;
+}
+*/
 
 /* ===================
     ALL: Orange Theme
    =================== */
-/*
+
 #header-container{ 
 	border-bottom: 20px solid #e44d26; }
 
@@ -130,7 +163,7 @@ clear: both;
 ::-moz-selection { background: #f16529; color: #fff; text-shadow: none; }
 ::selection      { background: #f16529; color: #fff; text-shadow: none; }
 
-*/
+
 
 /* ==============
     MOBILE: Menu
