--- a/repositoryUserInterface/app/views/Application/userdisplay.html
+++ b/repositoryUserInterface/app/views/Application/userdisplay.html
@@ -362,7 +362,8 @@
 					var j = 0;
 					query[QUERY_DEVICE_ARRAY][i][QUERY_SENSOR_ARRAY] = new Array();
 					query[QUERY_DEVICE_ARRAY][i][QUERY_SENSOR_ARRAY][j] = {};
-					query[QUERY_DEVICE_ARRAY][i][QUERY_SENSOR_ARRAY][j][QUERY_SENSOR] = sensorname;
+					query[QUERY_DEVICE_ARRAY][i][QUERY_SENSOR_ARRAY][j][QUERY_SENSOR_NAME] = sensorname;
+					query[QUERY_DEVICE_ARRAY][i][QUERY_SENSOR_ARRAY][j][QUERY_SENSOR_ID] = sensorid;
 
 					try {
 
